--- a/views/reports/index.ejs
+++ b/views/reports/index.ejs
@@ -39,7 +39,7 @@
         </section>
         <section class="navbar__links">
         <a href="/"><i class="fas fa-home"></i></a>
-         <% if (user.id) { %>
+         <% if (user) { %>
             <a href="/reports/new"><i class="fas fa-pencil-alt"></i></a>
         <a href="/users/<%= user.id %>"><i class="fas fa-user-circle"></i></a>
         <form action="/logout?_method=DELETE" method="POST"">
@@ -87,8 +87,10 @@
 
         <aside class="report--body__aside">
             <p>
-                <% if(report.createdBy._id == user.id) { %>
-                <a href="/reports/<%= report._id %>/edit ">EDIT</a>   
+                <% if (user) { %>
+                    <% if(report.createdBy._id == user.id) { %>
+                    <a href="/reports/<%= report._id %>/edit ">EDIT</a>   
+                    <% } %>
                 <% } %>
             </p>
             <p class="report--body__aside__img"><img src="<%= report.imageLinks[0] %>" alt=""></p>
