--- a/views/users/accountSettings.ejs
+++ b/views/users/accountSettings.ejs
@@ -33,7 +33,7 @@
         </section>
         <section class="navbar__links">
             <a href="/"><i class="fas fa-home"></i></a>
-            <% if (user.id) { %>
+            <% if (user) { %>
             <a href="/reports/new"><i class="fas fa-pencil-alt"></i></a>
             <a href="/users/<%= user.id %>"><i class="fas fa-user-circle"></i></a>
             <form action="/logout?_method=DELETE" method="POST"">
