adds register text and link to form display

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -66,6 +66,7 @@
             </div>
           
             <button type="submit" class="btn">Login</button>
+            <p>Not already a member? <a href="/register">Register Here</a></p>
           </form>
         </div> 
     </main>
