fixes occurance field name

--- a/views/reports/new.ejs
+++ b/views/reports/new.ejs
@@ -110,7 +110,7 @@
                <fieldset>
                   <legend><i class="fas fa-redo"></i> Date Occured</legend>
             
-                  <input type="date" id="start" name="trip-start"
+                  <input type="date" id="start" name="occuranceDT"
                   placeholder="2018-07-22"
                   min="2020-12-09" >
                </fieldset>
