--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -381,6 +381,7 @@ main {
     z-index: 10;
 }
 /* -register- */
+/* new report */
 .new--report {
     display:flex;
     align-self: center;
@@ -442,4 +443,70 @@ main {
     margin-left: 20px;
     margin-bottom: 10px;
     z-index: 10;
+}
+/* -new report- */
+/* edit report */
+.edit--report {
+    display:flex;
+    align-self: center;
+    justify-self: center;
+    flex-direction: column;
+    width: 600px;
+    /* background-color: white; */
+    color: white;
+    margin: 0 auto 50px;
+    border-radius: 2px;
+    line-height: 20px;
+    border: 3px solid rgb(10, 189, 198);
+    box-shadow:0 0 7px rgb(10, 189, 198),  inset 0 0 7px rgb(10, 189, 198);
+    position: relative;
+}
+.edit--report::before {
+    content: '';
+    position: absolute;
+    top: -15px;
+    right: -15px;
+    bottom: -15px;
+    left: -15px;
+    border: 3px solid magenta;
+    box-shadow: 0 0 10px magenta, inset 0 0 10px magenta;
+    border-radius: 3px;
+}
+.edit--report form {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+    margin-top: 20px;
+    margin-left: 11px;
+    padding-left: 10px;
+    z-index: 10;
+}
+.edit--report form p {
+    margin: 0;
+    padding: 0;
+}
+.edit--report__textfields {
+    display: flex;
+    flex-direction: column;
+}
+.edit--report__selectors {
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px;
+}
+
+.formbuttons {
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+    margin-top: 15px;
+    margin-left: 20px;
+    margin-right: 20px;
+    z-index: 10;
+}
+#delete--btn {
+    background-color: orangered;
 }
