--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,12 +1,10 @@
 body, html{
     margin: 0;
     padding: 0;
-    /* background: url(../images/backgroundimg.jpg); */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; 
-    /* position: cover; */
     background-color: #091833;
     color: #ddd;
     background-size: 300vh;
@@ -14,13 +12,10 @@ body, html{
 
 /*Header*/
 header {
-    /* position: fixed; */
     top: 0;
     left: 0;
     color: rgba(158, 189, 130, 1);
-    /* height: 23%; */
     width: 100%;
-    /* padding: 1px; */
     background:#F2E205;
     display:flex;
     justify-content: center;
@@ -69,11 +64,6 @@ header {
     background-color: magenta;
     box-shadow: 0 0 10px magenta;
     margin: 0 10px;
-    /* text-shadow:
-    -2px -2px 0 #000,  
-     2px -2px 0 #000,
-     -2px 2px 0 #000,
-      2px 2px 0 #000; */
 }
 .navbar__links {
     display: flex;
@@ -94,7 +84,6 @@ header {
 }
 #navtop {
     background-color: white;
-    /* position: fixed;  */
     top: 26%; 
     width: 100%; 
     height: .5px;
@@ -103,7 +92,6 @@ header {
 #navbottom {
     overflow: hidden;
     background-color: white;
-    /* position: fixed;  */
     top: 31%; 
     width: 100%; 
     height: .5px;
@@ -124,13 +112,14 @@ main {
     justify-self: center;
     flex-direction: row;
     width: 600px;
-    /* background-color: white; */
     color: white;
     margin: 0 auto 50px;
     border-radius: 2px;
     line-height: 20px;
     border: 3px solid rgb(10, 189, 198);
-    box-shadow:0 0 7px rgb(10, 189, 198),  inset 0 0 7px rgb(10, 189, 198);
+    box-shadow:
+    0 0 7px rgb(10, 189, 198),  
+    inset 0 0 7px rgb(10, 189, 198);
     position: relative;
 }
 .report::after {
@@ -159,7 +148,6 @@ main {
 .report--header {
     display:flex;
     flex-direction: column;
-    /* border: 2px solid black;     */
     width:100%;
     padding: 0;
     margin: 0;
@@ -189,7 +177,6 @@ main {
 .report--body {
     display:flex;
     flex-direction: column;
-    /* border: 2px solid white; */
     padding: 0;
     margin: 0;
     padding-left: 10px;
@@ -203,8 +190,6 @@ main {
 }
 .report--body__aside {
     display: flex;
-    /* border: 2px solid yellow; */
-    /* height: 100%; */
     flex: 1;
     flex-direction: column;
     text-align: right;
@@ -259,13 +244,14 @@ main {
     justify-self: center;
     flex-direction: column;
     width: 600px;
-    /* background-color: white; */
     color: white;
     margin: 0 auto 50px;
     border-radius: 2px;
     line-height: 20px;
     border: 3px solid rgb(10, 189, 198);
-    box-shadow:0 0 7px rgb(10, 189, 198),  inset 0 0 7px rgb(10, 189, 198);
+    box-shadow:
+    0 0 7px rgb(10, 189, 198),  
+    inset 0 0 7px rgb(10, 189, 198);
     position: relative;
 }
 .settings::before {
@@ -315,13 +301,14 @@ main {
     justify-self: center;
     flex-direction: column;
     width: 250px;
-    /* background-color: white; */
     color: white;
     margin: 0 auto 50px;
     border-radius: 2px;
     line-height: 20px;
     border: 3px solid rgb(10, 189, 198);
-    box-shadow:0 0 7px rgb(10, 189, 198),  inset 0 0 7px rgb(10, 189, 198);
+    box-shadow:
+    0 0 7px rgb(10, 189, 198),  
+    inset 0 0 7px rgb(10, 189, 198);
     position: relative;
 }
 .login::before {
@@ -352,13 +339,14 @@ main {
     justify-self: center;
     flex-direction: column;
     width: 250px;
-    /* background-color: white; */
     color: white;
     margin: 0 auto 50px;
     border-radius: 2px;
     line-height: 20px;
     border: 3px solid rgb(10, 189, 198);
-    box-shadow:0 0 7px rgb(10, 189, 198),  inset 0 0 7px rgb(10, 189, 198);
+    box-shadow:
+    0 0 7px rgb(10, 189, 198),  
+    inset 0 0 7px rgb(10, 189, 198);
     position: relative;
 }
 .register::before {
@@ -388,7 +376,6 @@ main {
     justify-self: center;
     flex-direction: column;
     width: 600px;
-    /* background-color: white; */
     color: white;
     margin: 0 auto 50px;
     border-radius: 2px;
@@ -449,13 +436,14 @@ main {
     justify-self: center;
     flex-direction: column;
     width: 600px;
-    /* background-color: white; */
     color: white;
     margin: 0 auto 50px;
     border-radius: 2px;
     line-height: 20px;
     border: 3px solid rgb(10, 189, 198);
-    box-shadow:0 0 7px rgb(10, 189, 198),  inset 0 0 7px rgb(10, 189, 198);
+    box-shadow:
+    0 0 7px rgb(10, 189, 198),  
+    inset 0 0 7px rgb(10, 189, 198);
     position: relative;
 }
 .edit--report::before {
