--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -427,7 +427,14 @@ main {
     flex-direction: column;
     margin-right: 20px;
 }
-
+.new--report--btn {
+    width: 6ch;
+    padding: 0;
+    margin: 0;
+    margin-left: 20px;
+    margin-bottom: 10px;
+    z-index: 10;
+}
 #new--report--btn {
     width: 6ch;
     padding: 0;
